# openapi.yaml
@@ -1,10 +1,88 @@
 openapi: 3.0.3
 
 info:
-  title: Skeleton
+  title: Owl
   version: 1.0.0
 
-paths: {}
+tags:
+  - name: User
+
+paths:
+  /api/v{apiVersion}/user:
+    parameters:
+      - $ref: '#/components/parameters/apiVersion'
+    post:
+      summary: Create new user.
+      operationId: createUser
+      tags:
+        - User
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserCreateDto'
+        required: true
+      responses:
+        '201':
+          description: User successfully created.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserCreateDto'
+        '400':
+          $ref: '#/components/responses/InvalidRequest'
+        '4XX':
+          $ref: '#/components/responses/ClientError'
+        '5XX':
+          $ref: '#/components/responses/Error'
+
+  /api/v{apiVersion}/user/{userId}:
+    parameters:
+      - $ref: '#/components/parameters/apiVersion'
+      - $ref: '#/components/parameters/userId'
+    get:
+      summary: Get user.
+      operationId: getUser
+      tags:
+        - User
+      responses:
+        '200':
+          description: User data.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          $ref: '#/components/responses/InvalidRequest'
+        '4XX':
+          $ref: '#/components/responses/ClientError'
+        '5XX':
+          $ref: '#/components/responses/Error'
+
+  /api/v{apiVersion}/user/check:
+    parameters:
+      - $ref: '#/components/parameters/apiVersion'
+    get:
+      summary: Check if username or email exists.
+      operationId: checkUser
+      tags:
+        - User
+      parameters:
+        - $ref: '#/components/parameters/email'
+        - $ref: '#/components/parameters/username'
+      responses:
+        '200':
+          description: Checked property is available.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserCheck'
+        '400':
+          $ref: '#/components/responses/InvalidRequest'
+        '4XX':
+          $ref: '#/components/responses/ClientError'
+        '5XX':
+          $ref: '#/components/responses/Error'
 
 components:
   parameters:
@@ -18,6 +96,27 @@ components:
         minimum: 1
         maximum: 2
         default: 1
+    email:
+      name: email
+      description: The user's email.
+      in: query
+      required: false
+      schema:
+        $ref: '#/components/schemas/email'
+    userId:
+      name: userId
+      description: The user ID.
+      in: path
+      required: true
+      schema:
+        $ref: '#/components/schemas/userId'
+    username:
+      name: username
+      description: The user's username.
+      in: query
+      required: false
+      schema:
+        $ref: '#/components/schemas/username'
 
   responses:
     ClientError:
@@ -76,6 +175,61 @@ components:
       required:
         - message
         - validation
+    User:
+      type: object
+      properties:
+        id:
+          $ref: '#/components/schemas/userId'
+          readonly: true
+        email:
+          $ref: '#/components/schemas/email'
+        username:
+          $ref: '#/components/schemas/username'
+      additionalProperties: false
+    UserCheck:
+      type: object
+      properties:
+        email:
+          type: string
+          description: Email is available.
+          enum:
+            - available
+            - used
+        username:
+          type: string
+          description: Username is available.
+          enum:
+            - available
+            - used
+      additionalProperties: false
+      anyOf:
+        - required:
+          - email
+        - required:
+          - username
+    UserCreateDto:
+      type: object
+      properties:
+        email:
+          $ref: '#/components/schemas/email'
+        username:
+          $ref: '#/components/schemas/username'
+      required:
+        - email
+        - username
+      additionalProperties: false
+    email:
+      type: string
+      format: email
+      description: The user's email.
+    userId:
+      type: string
+      format: uuid
+      description: Unique identifier of the user.
+    username:
+      type: string
+      format: username
+      description: The user's username.
 
   securitySchemes:
     Bearer:
